Fixed alignment issue with navigation bar on categories page

--- a/BoomNBoard/static/styling/categories.css
+++ b/BoomNBoard/static/styling/categories.css
@@ -47,6 +47,8 @@ body {
 
 #MemesDiv, #RingtonesDiv, #MusicDiv {
     margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
     border-style: solid;
     border-width: 10px;
     border-color: black;
